[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "speedtools"
version = "0.1.0"
description = "NFS resource utilities"
authors = [
    {name = "Rafał Kuźnia"},
    {email = "rafal.kuznia@protonmail.com"},
]
dependencies = [
    "kaitaistruct",
    "pillow",
    "black",
]
license = {text = "GPL-3.0-or-later"}

[project.scripts]
speedtool-unpack = "speedtools.speedtool:unpack"
speedtool-obj = "speedtools.speedtool:obj"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
