[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "speedtools"
version = "0.2.0"
description = "NFS4 HS (PC) resource utilities"
authors = [{ name = "Rafał Kuźnia" }, { email = "rafal.kuznia@protonmail.com" }]
readme = { file = 'README.md', content-type = 'text/markdown' }
dependencies = ["kaitaistruct", "pillow", "click", "more-itertools", "parse"]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: File Formats',
    'Typing :: Typed',
]

[project.scripts]
speedtool-unpack = "speedtools.speedtool:unpack"
speedtool-obj = "speedtools.speedtool:obj"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99

[tool.mypy]
python_version = 3.11
strict = true
exclude = ['^setup\.py$']

[[tool.mypy.overrides]]
module = "speedtools.parsers.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "speedtools.blender.*"
strict = true
disallow_untyped_calls = false

[tool.pylint.main]
# Files or directories to be skipped. They should be base names, not paths.
ignore = ["parsers"]

[tool.pylint.basic]
good-names = [
    "a",
    "b",
    "c",
    "d",
    "x",
    "y",
    "z",
    "i",
    "j",
    "k",
    "f",
    "_",
    "uv",
    "wm",
]

[tool.pylint.design]
# Maximum number of arguments for function / method.
max-args = 8
# Maximum number of attributes for a class (see R0902).
max-attributes = 10
# Maximum number of locals for function / method body.
max-locals = 16
# Minimum number of public methods for a class (see R0903).
min-public-methods = 1

[tool.pylint."messages control"]
# Disable the message, report, category or checker with the given id(s). You can
# either give multiple identifiers separated by comma (,) or put this option
# multiple times (only on the command line, not in the configuration file where
# it should appear only once). You can also use "--disable=all" to disable
# everything first and then re-enable specific checks. For example, if you want
# to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-module-docstring",
    "missing-class-docstring",
    "logging-fstring-interpolation",
    "missing-function-docstring",
    "unused-argument",
]
